--- a/BlazorWallAreaCalculator/Pages/Index.razor
+++ b/BlazorWallAreaCalculator/Pages/Index.razor
@@ -115,174 +115,20 @@
                                FloatLabelType="@FloatLabelType.Always"
                     @bind-Value="wallAddEdit.WallName">
                     </SfTextBox>
-                    <hr />
-                    @if (IsAdd)
-                    {
-                        <SfDropDownList TItem="WallType"
-                                        TValue="string"
-                                        FloatLabelType="@FloatLabelType.Always"
-                                        DataSource="@LocalData"
-                                        Placeholder="Select a Wall Type"
-                                        PopupHeight="200px"
-                                        PopupWidth="250px">
-                            <DropDownListFieldSettings Text="WallTypeName" Value="WallTypeID"></DropDownListFieldSettings>
-                            <DropDownListEvents TItem="WallType" TValue="string" ValueChange="@OnChangeWallType"></DropDownListEvents>
-                        </SfDropDownList>
-                    }
-                    else
-                    {
-                        <SfTextBox Enabled="false" Placeholder="Wall Type"
-                                   FloatLabelType="@FloatLabelType.Always"
-                        @bind-Value="wallAddEdit.WallTypeName">
-                        </SfTextBox>
-                    }
 
-                    @switch (wallAddEdit.WallTypeName)
-                    {
-                        case "Simple":
-                            <div>
-                                <br />
-                                <img src=".\\media\\simple.jpg" />
-                                <br />
-                            </div>
+                    <div>
+                        <br />
+                    </div>
 
-                            <div class="grid-container">
-
-                                <div class="grid-child left-column">
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Wall Length (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                    @bind-Value="wallAddEdit.WallLengthMax"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-                                </div>
-
-                                <div class="grid-child right-column">
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Wall Height (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                    @bind-Value="wallAddEdit.WallHeightMax"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-                                </div>
-
-                            </div>
-
-                            break;
-
-                        case "Complex - Left":
-                            <div>
-                                <br />
-                                <img src=".\\media\\complex-left.jpg" />
-                                <br />
-                            </div>
-                            <div class="grid-container">
-                                <div class="grid-child left-column">
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Max Wall Length (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                                      Width="50"
-                                                      @bind-Value="wallAddEdit.WallLengthMax"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Min Wall Length (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                                      Width="50"
-                                                      @bind-Value="wallAddEdit.WallLengthMin"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-                                </div>
-
-                                <div class="grid-child right-column">
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Max Wall Height (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                                      Width="50"
-                                                      @bind-Value="wallAddEdit.WallHeightMax"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Min Wall Height (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                                      Width="50"
-                                                      @bind-Value="wallAddEdit.WallHeightMin"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-                                </div>
-                            </div>
-                            break;
-
-                        case "Complex - Right":
-                            <div>
-                                <br />
-                                <img src=".\\media\\complex-right.jpg" />
-                                <br />
-                            </div>
-                            <div class="grid-container">
-                                <div class="grid-child left-column">
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Max Wall Length (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                                      Width="50"
-                                                      @bind-Value="wallAddEdit.WallLengthMax"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Min Wall Length (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                                      Width="50"
-                                                      @bind-Value="wallAddEdit.WallLengthMin"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-                                </div>
-
-                                <div class="grid-child right-column">
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Max Wall Height (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                                      Width="50"
-                                                      @bind-Value="wallAddEdit.WallHeightMax"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-
-                                    <SfNumericTextBox Enabled="true"
-                                                      Placeholder="Min Wall Height (mm)"
-                                                      Format="n0"
-                                                      FloatLabelType="@FloatLabelType.Always"
-                                                      Width="50"
-                                                      @bind-Value="wallAddEdit.WallHeightMin"
-                                                      ShowSpinButton=false
-                                                      CssClass="e-style">
-                                    </SfNumericTextBox>
-                                </div>
-                            </div>
-                            break;
-                    }
-
+                    <SfNumericTextBox Enabled="true"
+                                      Placeholder="Wall Area (SqM)"
+                                      Format="n2"
+                                      FloatLabelType="@FloatLabelType.Always"
+                    @bind-Value="wallAddEdit.WallSqM"
+                                      ShowSpinButton=false
+                                      CssClass="e-style">
+                    </SfNumericTextBox>
                 </div>
-
                 <br /><br />
                 <div class="e-footer-content">
                     <div class="button-container">
@@ -304,14 +150,6 @@
         text-align: right;
         padding: 0px 5px 0px 0px;
     }
-
-    .grid-container {
-        display: grid;
-        max-width: 400px;               /* Maximum width of the whole container - in this case both columns */
-        grid-template-columns: 1fr 1fr; /* Relative width of each column (1fr 1fr is equivalent to, say, 33fr 33fr */
-        grid-gap: 100px;                /* size of the gap between columns */
-
-    }
 </style>
 
 @code{
@@ -324,21 +162,8 @@
     public int SelectedRoomID { get; set; } = 0;
 
     public int SelectedWallID { get; set; } = 0;
-    public string SelectedWallTypeName { get; set; } = string.Empty;
     public string SelectedWallName { get; set; } = string.Empty;
     public decimal SelectedWallSqM { get; set; } = decimal.Zero;
-
-    public int SelectedWallLengthMax { get; set; } = 0;
-    public int SelectedWallLengthMin { get; set; } = 0;
-    public int SelectedWallHeightMax { get; set; } = 0;
-    public int SelectedWallHeightMin { get; set; } = 0;
-
-    public decimal decWallSqM = decimal.Zero;
-    public decimal decWallLengthMax = decimal.Zero;
-    public decimal decWallLengthMin = decimal.Zero;
-    public decimal decWallHeightMax = decimal.Zero;
-    public decimal decWallHeightMin = decimal.Zero;
-
 
     SfGrid<Room>? RoomGrid;
     SfGrid<Wall>? WallGrid;
@@ -354,22 +179,6 @@
 
     private List<ItemModel> RoomToolbaritems = new List<ItemModel>();
     private List<ItemModel> WallToolbaritems = new List<ItemModel>();
-
-    public class WallType
-    {
-        public int WallTypeID { get; set; } = 0;
-        public string WallTypeName { get; set; } = string.Empty;
-    }
-
-    List<WallType> LocalData = new List<WallType>
-    {
-        new WallType() {WallTypeID =1, WallTypeName= "Simple" },
-        new WallType() {WallTypeID =2, WallTypeName= "Complex - Left" },
-        new WallType() {WallTypeID =3, WallTypeName= "Complex - Right" },
-    };
-
-    public bool IsAdd { get; set; }
-
 
     protected override async Task OnInitializedAsync()
     {
@@ -541,12 +350,6 @@
     }
 
     #region Walls
-    public void OnChangeWallType(ChangeEventArgs<string, WallType> args)
-    {
-        wallAddEdit.WallTypeID = args.ItemData.WallTypeID;
-        wallAddEdit.WallTypeName = args.ItemData.WallTypeName;
-    }
-
     public async Task WallToolbarClickHandler(ClickEventArgs args)
     {
         //Check that a room has been selected
@@ -558,9 +361,6 @@
         if (args.Item.Text == "Add")
         {
             //Code for adding goes here
-            IsAdd = true;
-            SelectedWallID = 0;
-            SelectedWallTypeName = string.Empty;
             dialogTitle = "Add a Wall";
             wallAddEdit = new();
             await DialogWall.ShowAsync(false);
@@ -569,7 +369,6 @@
         {
             //Code for editing
             dialogTitle = "Edit a Wall";
-            IsAdd = false;
 
             //Check that a wall has been selected
             if (SelectedWallID == 0)
@@ -583,12 +382,7 @@
                 wallAddEdit.WallID = SelectedWallID;
                 wallAddEdit.RoomID = SelectedRoomID;
                 wallAddEdit.WallName = SelectedWallName;
-                // wallAddEdit.WallSqM = SelectedWallSqM;
-                wallAddEdit.WallLengthMax = SelectedWallLengthMax;
-                wallAddEdit.WallLengthMin = SelectedWallLengthMin;
-                wallAddEdit.WallHeightMax = SelectedWallHeightMax;
-                wallAddEdit.WallHeightMin = SelectedWallHeightMin;
-
+                wallAddEdit.WallSqM = SelectedWallSqM;
                 await DialogWall.ShowAsync(false);
                 StateHasChanged();
             }
@@ -625,18 +419,12 @@
         //{args.Data} returns the current selected records.
         SelectedWallID = args.Data.WallID;
         SelectedWallName = args.Data.WallName;
-        // SelectedWallSqM = args.Data.WallSqM;
-        SelectedWallLengthMax = args.Data.WallLengthMax;
-        SelectedWallLengthMin = args.Data.WallLengthMin;
-        SelectedWallHeightMax = args.Data.WallHeightMax;
-        SelectedWallHeightMin = args.Data.WallHeightMin;
+        SelectedWallSqM = args.Data.WallSqM;
+
     }
 
     protected async Task WallSave()
     {
-        //Always do area calculation
-        await CalculateArea(wallAddEdit);
-
         if (wallAddEdit.WallID == 0)    //It's an insert
         {
             //Check for duplicates
@@ -647,12 +435,12 @@
                 wallAddEdit.RoomID = SelectedRoomID;
 
                 // Temporarily assign values to these:
-                // wallAddEdit.WallTypeID = 0;
-                // wallAddEdit.WallTypeName = "";
-                // wallAddEdit.WallLengthMax = 0;
-                // wallAddEdit.WallLengthMin = 0;
-                // wallAddEdit.WallHeightMax = 0;
-                // wallAddEdit.WallHeightMin = 0;
+                wallAddEdit.WallTypeID = 0;
+                wallAddEdit.WallTypeName = "";
+                wallAddEdit.WallLengthMax = 0;
+                wallAddEdit.WallLengthMin = 0;
+                wallAddEdit.WallHeightMax = 0;
+                wallAddEdit.WallHeightMin = 0;
 
                 try
                 {
@@ -712,43 +500,7 @@
     {
         DialogWall.HideAsync();
     }
-    #endregion
 
-
-
-    #region Area Calculation
-    public async Task CalculateArea(Wall wallAddEdit)
-    {
-        switch (wallAddEdit.WallTypeName)
-        {
-            case "Simple":
-
-                decWallLengthMax = Convert.ToDecimal(wallAddEdit.WallLengthMax);
-                decWallHeightMax = Convert.ToDecimal(wallAddEdit.WallHeightMax);              
-
-                decimal area = decimal.Round((decWallLengthMax * decWallHeightMax)/1000000, 3, MidpointRounding.AwayFromZero);                
-
-                wallAddEdit.WallSqM = area;
-
-                break;
-
-            case "Complex - Left":
-            case "Complex - Right":
-
-                decWallLengthMax = Convert.ToDecimal(wallAddEdit.WallLengthMax);
-                decWallHeightMax = Convert.ToDecimal(wallAddEdit.WallHeightMax);
-                decWallLengthMin = Convert.ToDecimal(wallAddEdit.WallLengthMin);
-                decWallHeightMin = Convert.ToDecimal(wallAddEdit.WallHeightMin);
-
-                decimal area1 = (decWallLengthMax * decWallHeightMin);
-                decimal area2 = (decWallLengthMin * (decWallHeightMax - decWallHeightMin));
-                decimal area3 = decimal.Round((((decWallLengthMax - decWallLengthMin) * (decWallHeightMax - decWallHeightMin)) / 2), 3, MidpointRounding.AwayFromZero);
-
-                wallAddEdit.WallSqM = decimal.Round(((area1 + area2 + area3) / 1000000), 3, MidpointRounding.AwayFromZero);
-
-                break;
-        }
-    }
     #endregion
 
 }
